fix: contact left section in tablet view not stretching, comments html

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -12,6 +12,7 @@
     /* NAV */
     .nav{
         width: 10%;
+        min-width: 75px;
     }
 
     .nav .tool-bar{
